--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,9 +34,9 @@ body {
 .line-1 {
   position: relative;
   top: 50%;
-  width: 24em;
+  width: fit-content;
   margin: 0 auto;
-  border-right: 2px solid rgba(255, 255, 255, 0.75);
+  border-right: 2px solid rgba(255, 241, 43, 0.75);
   font-size: 180%;
   text-align: center;
   white-space: nowrap;
@@ -57,6 +57,6 @@ body {
 }
 
 @keyframes blinkTextCursor {
-  from { border-right-color: rgba(255, 255, 255, 0.75); }
+  from { border-right-color: rgba(255, 240, 31, 0.75); }
   to { border-right-color: transparent; }
 }
